welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: '(' expected but '{' found.
    if{a<b && b<c}{return true}
      ^inOrder:5: error: illegal start of simple expression
  }
  ^